[fix] dropdown menu 버그 수정 1. 화살표 아이콘 추가 2. option별 hover효과 추가 3. z-index 추가

--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,12 @@
     
     padding-left:10px;
 }
+.arrow-icon{
+    width:18px;
+    position:absolute;
+    right: 5px;
+    top:7px;
+}
 .filter-bar-recruit-option-list{
     display:none;
 }
@@ -78,7 +84,7 @@
 
     width:105px;
     
-    padding:20px 5px;
+    padding:20px 0px;
     box-sizing:border-box;
  
     background-color:white;
@@ -87,14 +93,17 @@
     border-radius:5px;
 
     position: absolute;
+    z-index:3;
     top:30px;
     left:0;
 
 }
 .filter-bar-recruit-option{
-    padding:10px 5px;
+    padding:10px 10px;
 }
-
+.filter-bar-recruit-option:hover{
+    background-color: #f7f9fa;
+}
 
 
 
